test/failing/syntax3.trunnel

union x {
  u8 y;
  u16 z;
}